--- a/MomentWork/baselib/build.gradle
+++ b/MomentWork/baselib/build.gradle
@@ -34,6 +34,7 @@ android {
         exclude 'META-INF/notice.txt'
         exclude 'META-INF/license'
         exclude 'META-INF/license.txt'
+        exclude 'META-INF/services/javax.annotation.processing.Processor'
     }
 }
 
