--- a/MomentWork/app/src/main/AndroidManifest.xml
+++ b/MomentWork/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.lh.nexusunsky.activity.MomentIndexActivity">
+        <activity
+            android:name="com.lh.nexusunsky.activity.MomentIndexActivity"
+            android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
